--- a/betterself/hydration-reminder/styles.css
+++ b/betterself/hydration-reminder/styles.css
@@ -5,29 +5,29 @@ body {
     background-color: #f9f9f9;
 }
 
-header {
+header.bg-primary {
     background-color: #333;
     color: #fff;
     padding: 1em;
     text-align: center;
 }
 
-main {
+main.container {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2em;
 }
 
-section {
+section.card {
     background-color: #fff;
     padding: 1em;
     margin-bottom: 1em;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1,
-h2 {
+h1.card-header,
+h2.card-header {
     margin-top: 0;
 }
 
@@ -41,15 +41,15 @@ label {
     margin-bottom: 0.5em;
 }
 
-input,
-select {
+input.form-control,
+select.form-control {
     margin-bottom: 1em;
     padding: 0.5em;
     border: 1px solid #ccc;
     border-radius: 0.25em;
 }
 
-button {
+button.btn.btn-primary {
     background-color: #333;
     color: #fff;
     padding: 0.5em 1em;
@@ -58,24 +58,24 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+button.btn.btn-primary:hover {
     background-color: #444;
 }
 
-#reminder-list,
-#log-list {
+#reminder-list.list-group,
+#log-list.list-group {
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
-#reminder-list li,
-#log-list li {
+#reminder-list.list-group li,
+#log-list.list-group li {
     padding: 0.5em;
     border-bottom: 1px solid #ccc;
 }
 
-#reminder-list li:last-child,
-#log-list li:last-child {
+#reminder-list.list-group li:last-child,
+#log-list.list-group li:last-child {
     border-bottom: none;
 }
